feat: Refactor service configurations and enhance security setup
- Updated `application.yml` in `config-service` to include Eureka client and config server native settings.
- Improved Docker setup by adjusting `SPRING_PROFILES_ACTIVE` and refining config repository paths.
- Enhanced `auth-service` security with custom issuer URI and provided AuthorizationServerSettings bean.
- Modularized CORS and security filter chains in `auth-service` and `api-gateway` to segregate public/private endpoints.
- Adjusted database and issuer configurations in `auth-service` profiles for local and Docker environments.
- Synced `auth-service` frontend settings with updated issuer URL.